[tool.poetry]
name = "py_ocr"
version = "0.1.0"
description = ""
authors = ["Pieterjan Montens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
behave = "^1.2.6"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
