[tool.poetry]
name = "pyghotess"
version = "0.1.0"
description = ""
authors = ["Pieterjan Montens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pdf2image = "^1.14.0"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
pytz = "^2020.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
behave = "^1.2.6"
isort = "^5.6.4"

[tool.poetry.scripts]
api = "pyghotess.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
